# algovoi-composite-trust-query

./: .gitignore  NOTICE  README.md
python/: README.md  pyproject.toml
python/algovoi_composite_trust_query/: __init__.py  composite_trust_query.py
python/tests/: test_composite_trust_query.py
typescript/: README.md  package-lock.json  package.json
typescript/src/: composite-trust-query.ts  index.ts
typescript/test/: composite-trust-query.test.ts
